--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,36 @@
 .footer {
-    background-color: burlywood;
+    background-color: $color-secondary;
     grid-column: full-start / full-end;
+
+    padding: 8rem;
+}
+
+.nav {
+    list-style: none;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    align-items: center;
+}
+
+.nav__link {
+    &:link,
+    &:visited {
+        font-size: 1.4rem;
+        color: white;
+        text-decoration: none;
+        font-family: $font-display;
+        text-transform: uppercase;
+        text-align: center;
+        padding: 1.5rem;
+        display: block;
+
+        grid-gap: 2rem;
+        transition: all .4s;
+    }
+
+    &:hover, &:active {
+        background-color: rgba(#fff, .05);
+        transform: translateY(-3px);
+    }
 }
