--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -22,7 +22,7 @@
     grid-column: 4 / 7;
     width: 105%;
     z-index: 20;
-    box-shadow: 0 2rem 5erm rgba(0, 0, 0, .2);
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, .2);
 }
 
 .story__content {
